prevent overflow-x on gallery

--- a/public/less/styles.less
+++ b/public/less/styles.less
@@ -370,6 +370,7 @@ html
 	top: 0;
 	left: 0;
 	padding-top: 68px;
+	overflow-x: hidden;
 }
 
 .gallery-row
